--- a/src/build.gradle
+++ b/src/build.gradle
@@ -5,4 +5,5 @@ repositories {
 }
 dependencies {
     compile group: 'de.hhu.stups', name: 'virtual-kata-lib', version: '1.0.1'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
